--- a/colores.html
+++ b/colores.html
@@ -14,19 +14,19 @@
     <h1>Tabla de colores</h1>
     <tr>
       <td style="background-color: blueviolet;  width: 200px; height: 200px;">
-        <center>celda uno</center>
+        <center><b>Celda uno</b></center>
       </td>
       <td style="background-color: cyan; width: 200px; height: 200px;">
-        <center>celda dos</center>
+        <center><b>Celda dos</b></center>
       </td>
       <td style="background-color: deeppink; width: 200px; height: 200px;" ;>
-        <center>celda tres</center>
+        <center><b>Celda tres</b></center>
       </td>
       <td style="background-color: green; width: 200px; height: 200px;" ;>
-        <center>celda cuatro</center>
+        <center><b>Celda cuatro</b></center>
       </td>
       <td style="background-color: mediumblue; width: 200px; height: 200px;" ;>
-        <center>celda cinco</center>
+        <center><b>Celda cinco</b></center>
       </td>
     </tr>
   </table>
